Projects/Operations/skill-development/xiaoke-writing/versions/v9/写作规范.md
## 总原则

这份规范重点处理三层问题：

- 不要替读者想
- 不要让一个顺的解释抢跑到事实前面
- 不要用怪词撑判断

也就是说，这里不只处理句子里的假力度和解释里的抢跑定义，也处理那些字面能通、读起来却发空发飘的表达。

写一篇文章时，顺序不要反：

1. 先判断价值
2. 再设计节奏
3. 最后收口表达和排版

节奏要直接并进主线，不能游离在正文结构之外。

---

**第一步：先判断这篇文章到底卖什么价值**

在开始改写之前，不要急着搭结构，也不要急着想标题。

先回答下面 4 个问题：

1. **这篇文章最强的价值是什么？**
   - 教读者怎么做
   - 帮读者理解一件事
   - 展示一个案例为什么成立
   - 提供一份可收藏的资源清单

2. **这篇文章最适合写给谁？**
   - 新手
   - 普通团队
   - 开发者
   - 管理者
   - 对某一类问题有明确需求的人

3. **这篇文章最适合在哪个场景下被打开？**
   - 想安装 / 上手
   - 想理解一个新概念
   - 想判断一件事值不值得跟
   - 想知道别人是怎么做成的
   - 想快速拿走一套方法

4. **读者看完后最应该带走什么？**
   - 一个方法
   - 一个判断
   - 一个步骤清单
   - 一个案例框架
   - 一套资源入口

这一层是全篇最重要的起点。

如果这里没有回答清楚，后面的标题和结构很容易变成“总结得很完整，但价值不够直给”。

**一句话测试：**

- 能不能用一句话说清，这篇文章最值得卖给读者的到底是什么

示例：

- `Anthropic Skills` 那篇文章，真正值得卖的不是“官方又发了一篇博客”，而是“普通团队怎么让 Agent 真正进入工作”
- AI 泡沫分析那类文章，真正值得卖的不是“作者讲了很多现象”，而是“这篇文章给了读者一个重新判断行业的方法”

---

**第二步：先分文章类型，再决定骨架**

不要把所有技术博客都当成一种文章。

先判断它属于哪一类：

### 类型 A：教程指南

特征：

- 核心在“怎么做”
- 看完最好能直接动手
- 通常有步骤、配置、代码、文件结构

适合结构：

- 是什么 -> 为什么 -> 怎么做
- 概念介绍（20%） -> 核心步骤（60%） -> 进阶技巧（20%）

### 类型 B：案例方案

特征：

- 核心在“这套东西为什么成立”
- 通常不是一步一步操作，而是解释系统、架构、思路、做法
- 看完后读者拿走的是一种方案理解

适合结构：

- 背景 -> 问题 -> 方案 -> 为什么有效 -> 怎么借鉴
- 结果冲击 -> 常规做法不够 -> 系统结构 -> 落地启发

### 类型 C：经验提炼

特征：

- 来源通常是演讲、访谈、播客、实践复盘
- 核心在“别人做过后总结出什么”
- 看完后读者带走的是经验和方法

适合结构：

- 导语总结 -> 编号要点 -> 关键解释 -> 总结 / 建议

### 类型 D：分析评论 / 观点文

特征：

- 核心在“这件事意味着什么”
- 原文不一定教你做事，但会给出判断、框架、趋势解释
- 看完后读者带走的是看法和判断

适合结构：

- 强判断开头 -> 主线搭建 -> 分阶段展开 -> 回到结论

### 类型 E：官方方法框架文

特征：

- 来源常常是官方博客、产品文档、架构说明
- 不是单纯教程，也不是纯观点
- 核心在“这套新思路为什么重要、会改变什么”

适合结构：

- 发生了什么 -> 为什么值得关心 -> 核心机制 / 框架 -> 对谁有用 -> 怎么借鉴

**判断标准：**

- 先判断主类型
- 再判断次类型

示例：

- `Anthropic Skills`：主类型是 `案例方案`，次类型是 `官方方法框架文`
- AI 泡沫分析：主类型是 `分析评论 / 观点文`

---

**第三步：标题先从价值反推**

这一条是公众号改写里最容易做错，也最关键的一条。

标题不要先想“我要写成 3 个判断 / 4 个变化 / 一个趋势”，要先问：

**这篇文章最值得读者点开的理由是什么？**

### 标题的优先顺序

先判断这篇文章最适合卖哪一种价值：

1. **问题**
   - 读者正在卡什么
2. **场景**
   - 读者会在什么使用情境里需要这篇文章
3. **结果**
   - 看完能带走什么
4. **优先级**
   - 为什么这件事应该先看、先做、最该做
5. **对象**
   - 哪个热点、哪个产品、哪个人、哪个关键词

### 标题的 8 个底层变量

#### 1. 人群

- 新手
- 普通团队
- 开发者
- 做 Agent 的团队

#### 2. 场景

- 安装
- 上手
- 落地
- 做 Agent
- 提高效率

#### 3. 结果

- `10` 个 skill
- `3` 个判断
- 一套方法
- 一个更靠谱的解法

#### 4. 问题

- 为什么做不好
- 为什么还不够专业
- 为什么接了工具也没用

#### 5. 优先级

- 最该
- 先做
- 别再
- 第一件事

#### 6. 确定性信号

- 数字
- 具体对象
- 热点词
- 名人 / 品牌 / 平台名

#### 7. 低认知成本

避免在标题一上来就堆：

- 范式
- 能力层
- 扩展方式
- 变化

如果这些词很抽象，必须用更低成本的价值词把它们包住。

#### 8. 承诺要能兑现

如果标题写了：

- `3` 个判断
- `5` 个步骤
- 最该先做什么

正文第一屏必须立刻接住。

### 标题禁止项

- 不要只写作者总结，不写读者收益
- 不要只写“变化”“趋势”“思考”，不写具体对象和结果
- 不要用读者需要先理解背景才能感受到价值的抽象标题

### 标题自检

- [ ] 一眼能看出这是写给谁的吗
- [ ] 一眼能看出解决什么问题或提供什么结果吗
- [ ] 有没有明确的对象、数字、场景或优先级
- [ ] 如果删掉背景知识，读者还能感受到标题价值吗

---

**第四步：先搭逻辑骨架**

在已经确定“卖什么价值”和“文章类型”之后，再去搭结构。

### 教程指南型

- 开头：读者能做成什么
- 正文 1：这件事是什么
- 正文 2：为什么值得做
- 正文 3-5：核心步骤
- 结尾：下一步怎么继续
- 这是内部骨架，不是成稿排版
- 真正成稿时要回写成：段落承担主线，步骤和命令保留必要分点

### 案例方案型

- 开头：这套东西为什么值得关注
- 正文 1：原问题是什么
- 正文 2：旧做法为什么不够
- 正文 3：新方案怎么成立
- 正文 4：读者怎么借鉴
- 结尾：一句总判断

### 经验提炼型

- 开头：这份经验为什么值得看
- 正文 1-3：关键经验分组
- 正文 4：最容易踩的坑
- 结尾：先做哪一步

### 分析评论 / 观点文型

- 开头：先下判断
- 正文 1：为什么这个问题值得看
- 正文 2：现象背后的逻辑
- 正文 3：真正的风险 / 真正的变化
- 结尾：这对读者意味着什么

### 官方方法框架型

- 开头：这次释放的是一个新判断
- 正文 1：为什么会出现这个变化
- 正文 2：这套框架到底是什么
- 正文 3：为什么它比旧思路更成立
- 正文 4：普通团队最该学什么
- 结尾：一句方法论总结

**输出要求：**

- 先列 `3` 到 `6` 个副标题
- 每个副标题都必须能独立传递价值
- 副标题之间要有递进关系

---

**第五步：把节奏并进主线**

节奏要直接并进主线，但顺序不能反过来。先有价值，再调节奏。

### 先搞清视频稿和文章稿的区别

| 维度 | 视频稿 | 文章稿 |
|------|------|------|
| 第一目标 | 先解决“别划走” | 先解决“为什么值得继续读” |
| 单位节奏 | `10` 到 `20` 秒一个刺激点 | 一屏或 `2` 到 `4` 段一个刺激点 |
| 结构形式 | 可以几乎没有标题 | 必须有小标题和清楚骨架 |
| 奖励方式 | 问答切换、口语反转、情绪抬升 | 判断推进、信息兑现、例子落地 |
| 风险 | 容易空、容易吵、容易只剩钩子 | 容易平、容易松、容易越写越散 |

结论：

- 文章可以借视频稿的节奏
- 但不能直接照搬视频稿的形态

### 节奏设计的核心要求

可以把节奏理解成一句工作要求：

**每一屏都要给读者一个新的继续阅读理由。**

常见的续读理由有这些：

- 一个问题
- 一个反直觉判断
- 一个更具体的解释
- 一个和读者直接相关的后果
- 一个很快兑现的小答案

### 第一屏怎么抓住人

第一屏通常按这个顺序更稳：

1. 先抛一个和读者直接相关的问题
2. 立刻给一个判断
3. 很快说明这件事为什么和读者有关
4. 在第一屏内兑现一个最小答案

如果第一屏还在慢慢铺背景，读者很容易掉。

### 中段怎么续住

中段最怕解释太久，没有奖励。

一个更稳的写法是：

- 一个小标题只讲一个推进点
- 每个推进点控制在 `2` 到 `4` 段
- 每推进一小段，就补一个新的判断、例子或后果

中段写不动时，先检查这三个问题：

1. 这一段有没有新信息
2. 这一段有没有兑现前面的承诺
3. 这一段和读者到底有什么关系

只要三条都答不出来，这段大概率就该压缩。

### 小标题要承担推进

文章稿不能像视频稿那样完全取消标题。

小标题不只是分类标签，还要承担推进作用。

差的小标题：

- 背景介绍
- 相关思考
- 一些变化

更好的小标题：

- 小麦为什么能驯化人类
- AI 最先改写的是工作流
- 更该警惕的是 AI 对人的重塑

### 对谈重编排稿的小标题，先服务阅读理由

如果原始材料是播客、演讲、长访谈，小标题不要照着原顺序复述。

更稳的顺序通常是：

- 先告诉读者这篇为什么值得看
- 再讲变化发生在哪一层
- 最后回到读者接下来该补什么

这类写法可以借 `笔记侠` 的重编排策略，但不要照抄品牌口癖。

### 节奏不等于这些东西

下面这些做法看起来热闹，实际会伤节奏：

- 连续堆机械对比句
- 连续堆反问句
- 靠破折号制造假停顿
- 每段都想写成金句
- 为了提速把解释删到只剩态度

节奏真正解决的是推进速度，不是句式花样。

---

**第六步：内容填充与人话转译**

在确定结构之后，再做具体转写。

### 表达原则

1. **先给结论，再解释**
   - 尤其是公众号文章，先说读者为什么要继续读

2. **少解释术语，多解释影响**
   - 不要只解释概念是什么
   - 更要解释它对读者意味着什么

3. **比喻只做辅助，不做主体**
   - 比喻之后必须立刻回到技术本质

4. **避免 AI 腔**
   - 不用“赋能”“闭环”“生态”这类空词
   - 不用为了显得完整而写空泛总结句

5. **一段只做一件事**
   - 每段控制在 `3` 到 `5` 句
   - 能拆就拆

6. **减少表达杂质**
   - 机械的“不是……而是……”默认控制在 `0` 到 `1` 处
   - 如确有必要强调，最多 `2` 处
   - 不要靠破折号硬撑节奏
   - 不要用表情符号制造情绪
   - 不要用生活化比喻硬撑理解感

### 对比句怎么处理

当你很想写对比句时，优先试这几类更稳的句式：

- 直接判断句
- 因果句
- 递进句
- 场景句

示例：

- 不要写“核心不是工具数量，而是协作方式”
- 更稳的写法是“工具数量当然重要，但真正决定效果的是协作方式”

### 不要写评委腔

这类句子很容易看起来有劲，实际却在偷懒：

- 最抓人的一句话是
- 最吸引人的，是
- 最值得看的，是
- 最有冲击力的，不是
- 真正重要的，不在这里，而在

问题不只是腔调重。

更根本的问题是：

- 主体不清楚
- 判断标准不清楚
- 句子在靠语气制造力度，而不是靠信息推进

一旦这种句子连续出现，文章会很像在做点评、打分、揭晓答案，读感容易滑向“评委腔”。

更稳的替代方式通常有三种：

1. 写成明确主体的感受句
   - 我最先记住的一句是
   - 让我停下来的一句是
   - 最令我有感触的是

2. 写成明确对象的判断句
   - 对普通开发者更有提醒价值的是
   - 这期先讲清了
   - 这段更值得注意的是

3. 直接把判断说出来
   - 这期对谈先把角色变化讲清了
   - 这里更重要的是研究闭环怎么被改写

一句话原则：

- 如果你写了“最……的”，就必须能回答“对谁来说”
- 如果回答不出来，就别写成“最……的”

补一句容易误判的：

- `最吸引人` 只比 `最抓人` 软一点
- 如果没写清楚“对谁更有吸引力”，它还是同一种主体缺失

### 这组表达问题的底层规律

这类句子老是冒出来，不是因为词没换对，而是因为写法底层有三个偷懒动作：

1. 句子替主体发言
   - 明明是作者自己的感受，句子却装成公共结论
   - 明明是写给普通开发者的提醒，句子却不说对象是谁

2. 判断只报结论，不交代依据
   - 只说“最重要”“最值得看”
   - 不说它到底重要在什么地方，对谁更有用

3. 用对比骨架代替信息推进
   - 先摆一个“不是 X”
   - 再接一个“而是 Y”
   - 读起来像在纠偏，实际没有补多少新信息

所以更稳的写法，不是单纯把 `最抓人` 换成 `最吸引人`。

更稳的顺序是：

1. 先把主体写出来
   - 我
   - 这类读者
   - 普通开发者
   - 已经在用 Agent 的团队

2. 再把对象写出来
   - 哪一句
   - 哪一段
   - 哪个变化
   - 哪个场景

3. 最后才给判断
   - 我最先记住的是哪一句
   - 对普通开发者更有提醒价值的是哪一段
   - 这期先把哪个变化讲清了

如果一句话做不到“主体 + 对象 + 判断”这三层，通常就先别急着写成高力度句。

### 空心对比句真正的问题是什么

`不是……而是……` 和 `不在……而在……` 不是不能用。

问题在于，很多时候作者并没有真的在纠正误判，只是在借这个句式制造“我很会看问题”的感觉。

这就会出现一种空心句：

- 表面有力度
- 实际没补新信息

只有同时满足下面两条，这类句子才值得保留：

1. `前半句` 说的是读者常见误判
2. `后半句` 给的是更具体、更准确的新判断

如果做不到，就换成下面这些句式：

- 直接判断句
- 因果句
- 场景句
- 递进句

### 不要替读者想

这一层和前面讲的评委腔、空心对比句，其实是连着的。

很多句子之所以会显得居高临下，不只是因为语气重。

更深的一层是，作者已经顺手替读者做了三件事：

1. 先替读者想
2. 再替读者命名他真正的问题
3. 最后再回头纠正这个被自己先定义出来的读者

这就是为什么有些文章明明写得很顺，读者还是会觉得自己被安排了。

更稳的用户思维关心的是：

- 读者来这里要完成什么
- 读者最可能卡在哪一步
- 什么信息能帮他继续往下走

更危险的代入式权威关心的是：

- 读者刚才其实在怎么想
- 读者真正的问题应该叫什么
- 作者要怎样纠正这个被自己先设定出来的读者

可以压成一句话：

- 用户思维关心的是任务障碍
- 代入式权威关心的是读者内心

所以真正该防的，不是提前考虑读者。

真正该防的是：

- 把用户理解一路做成用户定义
- 再把用户定义做成用户纠正

### 当价值一部分来自作者真实认知变化时 要优先用显式主体

这条规则和“不要替读者想”不是冲突，  
而是刚好接在一起。

有些文章之所以越写越像评委在点评，  
不是因为缺了判断，  
而是因为作者把自己藏掉了，  
改成站在材料外面做一个无主体的总评。

这类文章常见于：

- 私号思考文
- 判断型文章
- 对谈、播客、长访谈重编排稿

如果一篇文章的价值，  
一部分本来就来自作者真实的认知变化，  
那默认不要写成：

- 这场对谈最有价值的地方是
- 难得就在这里
- 把这些判断摊开讲了一遍

这些句子的问题不只是腔调重。  
更深的一层是：  
它们把作者放在材料外面，  
让文章变成“无主体的客观总评”。  
读者会知道你在总结，  
但不一定知道你为什么相信这套总结。

更稳的起手方式通常是：

1. 我原来怎么想
2. 这次我在哪里被改了
3. 这个变化具体落在哪个对象和判断上
4. 我把这个收获还给读者

例如：

- 不稳：`这场对谈最有价值的地方，是把这些判断讲得很透`
- 更稳：`这次听完这场对谈，我第一次比较清楚地意识到，主动式 AI 和我之前熟悉的那种对话式 AI，其实不是同一类东西`

但这条规则也有边界：

- “我的视角”是为了补信任感和代入感
- 不是为了把全文写成情绪流水账
- “我”后面必须很快落到具体对象和具体判断

压成一句话：

- 当作者的判断变化本身就是价值，  
  就不要强行写成无主体概述；  
  直接用显式主体，  
  但马上落回具体对象和具体判断。

### 不要用怪词撑判断

这类问题经常出现在另外一种场景里：

- 评委腔已经少了
- “我的视角”也加进来了
- 句子看上去更像文章了
- 但读起来还是别扭

这时很常见的原因，不是信息错了，而是句子在用怪词撑判断。

这里说的“怪词”，不是生僻词。

更准确地说，是下面这类表达：

- 字面能通
- 语气好像有劲
- 但对象、动作或关系没有写清

常见例子：

- `这是一个漂亮的反转句`
- `这句话让我后背发紧`
- `AI 开始反向塑形`
- `把自己改造成更适合系统接手的形状`
- `另一种能力在往前顶`
- `AI 在顺手重写人`

这些句子的问题不只是“不自然”。

更关键的是：

- 作者在点评表达，不是在推进判断
- 词先到了，关系还没到
- 句子有气氛，但对象不够清楚
- 本来该直接写清的动作和后果，被一个词味很重的说法盖掉了

更稳的改法通常按这个顺序：

1. 先把对象补出来
   - 到底是谁在变
   - 到底是哪种能力、哪种动作、哪种关系

2. 再把动作写具体
   - 是表达方式变了
   - 是拆任务的方式变了
   - 是评价标准变了

3. 再把后果写清
   - 为什么这件事值得警惕
   - 具体会把判断带到哪里去

4. 如果还需要力度，优先用直接判断句
   - 不要再回头靠一个“有感觉的词”补气氛

例如：

- 不稳：`这是一个漂亮的反转句`
- 更稳：`这句话很反常识，但它提醒我，工具一旦进了系统，人也会跟着变`

- 不稳：`这句话让我后背发紧`
- 更稳：`这句话会让我警觉，因为我已经在按 AI 的方式调整自己`

- 不稳：`AI 开始反向塑形`
- 更稳：`AI 已经开始改我的表达方式和做事方式`

- 不稳：`更适合系统接手的形状`
- 更稳：`更容易让系统接手的拆法`

- 不稳：`另一种能力在往前顶`
- 更稳：`另一种能力变重要了`

一句话原则：

- 如果一句话的力量主要来自词味，不来自对象、动作和关系，就先回去重写。

### 模型为什么老会先补一个可解释对象

这条规则如果只停在“少写某种句子”，还是不够。

更底层的原因是，模型和写作者都会偏好先有一个可以展开解释的对象。

模型尤其容易这样，因为它不是先想清楚再落笔，而是在连续生成下一个更合理的 token。

对它来说，先压出一个：

- 典型读者
- 典型用户
- 真正问题
- 真正卡点
- 真正核心

然后围着这个对象把解释补完整，会比一直保持开放状态更稳定。

所以它经常会出现一种顺但危险的写法：

1. 先补一个解释骨架
2. 再补一个方便承接这个骨架的对象
3. 最后把整段话写得很像有洞察

这时问题不只是真假。

还包括：

- 对象是谁定的
- 框架是谁先定的
- 推断有没有抢在事实前面

而一旦这个被补出来的对象刚好是“读者”“用户”“团队真正的问题”，它就特别容易滑成代入式权威。

### 怎么把这类问题拦在写作前

如果要约束这类问题，最稳的做法不是单纯“让语气谦虚一点”。

更有效的是在写作前强制过一遍顺序：

1. 先分开已知和未知
   - 什么是材料里明确给出的
   - 什么只是你现在的猜测

2. 能补事实的先补事实
   - 能从上下文、原文、日志、网页、文件里查到的，先查
   - 不要用一段顺的解释去顶替本来能补到的材料

3. 先给分支，再给判断
   - 信息不足时，先写 `2 到 3` 个可能路径
   - 不要一上来就宣布“真正问题”

4. 只问会改变判断结果的问题
   - 提问不是越多越好
   - 重点是那个会改变分支判断的关键信息

5. 输出时强制拆开三层
   - 已知
   - 推测
   - 待确认

这个流程的重点不是让模型更保守。

而是：

- 不要让一个看起来顺的解释抢跑到事实前面
- 不要让一个方便展开的对象，替代了本来还该继续确认的信息

### 这些句子为什么特别危险

下面这些句子最容易同时踩中“先补对象”和“替读者下定义”两件事：

- 你真正的问题其实是
- 用户其实不在乎这个，他们在乎的是
- 团队的问题不是执行，而是 owner 意识
- 这篇文章真正想表达的，其实不是这个

这些句子不一定每次都错。

但它们有一个共同风险：

- 先替对象下定义
- 再围着这个定义把解释做完整

所以更稳的替代方式，通常是：

- 先说现象
- 先说障碍
- 先说分支
- 最后再给判断

而不是一上来就给“真正问题”的高位命名。

### 不同类型的内容取舍

#### 如果是教程指南

- 保留步骤
- 保留代码
- 保留文件结构
- 不能因为“公众号轻松”就把可操作性删掉

#### 如果是案例方案

- 保留问题
- 保留方案
- 保留成立原因
- 删除过深、低复用的枝节

#### 如果是观点文

- 保留论点
- 保留关键证据
- 删除重复情绪表达
- 强化“这对读者意味着什么”

#### 如果是官方方法框架文

- 保留框架判断
- 保留关键例子
- 删除过散的介绍性背景
- 强化“普通团队最该学什么”

### 结尾怎么收

结尾不要只是总结，而要收束价值。

常见结尾方式：

- 如果是教程：下一步先做什么
- 如果是案例：最值得借鉴什么
- 如果是观点：这对读者意味着什么
- 如果是框架文：普通团队最该先补哪一层

避免：

- “总而言之”
- “综上所述”
- 空泛升华

---

**第七步：成稿前硬检查**

### 价值检查

- [ ] 这篇文章到底卖的是方法、判断、案例还是资源
- [ ] 标题和开头是否把这个价值讲清楚了
- [ ] 读者看完后真的能拿走标题承诺的东西吗

### 节奏检查

- [ ] 第一屏内有没有问题、判断和最小兑现
- [ ] 每个小标题本身能不能传递推进
- [ ] 中段是否每一屏都有新的信息奖励
- [ ] 结尾有没有回到读者，而不是停在作者感慨

### 表达检查

- [ ] 全文机械对比句是否超过 `1` 处；如确有必要，最多 `2` 处
- [ ] 有没有连续出现“最抓人的”“最值得看的”“最有冲击力的”这类评委腔表达
- [ ] 如果出现了“最……的”，能不能回答“对谁来说”
- [ ] 有没有用“漂亮的反转句”“后背发紧”“反向塑形”这类怪词，去代替真正的对象、动作和后果
- [ ] 有没有把任务障碍写成读者内心、人格、认知层级或动机判断
- [ ] 有没有直接写出“你真正的问题其实是”“用户其实在乎的是”这类替对象下定义的句子
- [ ] 如果材料还不足，是否先补事实、补分支、补证据，而不是直接补一个“真正核心”
- [ ] 有没有连续堆反问句
- [ ] 有没有用破折号硬撑节奏
- [ ] 有没有用表情符号来制造情绪
- [ ] 有没有用蹩脚比喻、生活化比喻硬撑理解感或气氛
- [ ] 有没有走向“全篇列表”或“全篇纯段落”的极端

### 结构检查

- [ ] 只看标题和小标题，能看懂逻辑吗
- [ ] 主线是否清晰
- [ ] 有没有“作者知道很多，但读者拿不走什么”的问题

### 技术完整性检查

- [ ] 如果是指南文，能不能直接动手
- [ ] 如果是方法文，框架是否完整
- [ ] 如果是观点文，证据是否足够支撑判断

---

**第八步：最终输出要求**

- 一篇 Markdown 格式公众号文章
- 建议长度：
  - 教程 / 案例方案：`3000-5000` 字
  - 分析评论 / 观点文：`2500-4000` 字
  - 快速解读 / 框架文：`1800-3000` 字
- 全文不用表情符号
- 标题、小标题、开头都必须经过价值检查
- 节奏设计要体现在第一屏、中段和小标题推进里
- 正文中的外部链接默认使用标准 Markdown 格式 `[文本](URL)`，wenyan 默认会转换成文末脚注。如果某个链接需要读者在正文里直接复制，发布时加 `--no-footnote`，并在链接文本里直接包含完整 URL

### frontmatter 规范

发布主稿必须包含以下 frontmatter：

```yaml
---
title: 文章标题
cover: ./assets/封面图.png
digest: 50-100 字文章摘要
author: 筱可AI
share_text: 分享文章时使用的话术，1-2 句话
---
```

字段说明：
- `title`：文章标题，必填
- `cover`：封面图路径。如果不写，Wenyan 会默认拿正文第一张图当封面
- `digest`：文章摘要，用于公众号列表展示（50-100字为宜）
- `author`：作者名，本项目默认统一写 `筱可AI`
- `share_text`：分享文章时使用的话术，1-2 句话

**封面图位置**：默认把封面图放在正文标题下方、正文第一段之前，让读者进入文章后第一眼看到封面。写法示例：

```markdown
# 文章标题
![封面](./assets/封面图.png)

正文第一段...
```

图片文件名避免使用空格，统一用短横线 `-` 连接。

---

## 最后检查重点

对象定义问题要和句子问题一起检查：

1. 先判断这篇文章最值得卖给读者的价值
2. 再用节奏把这个价值持续兑现出来
3. 再把评委腔、空心对比句和怪词清掉，不要让句子只剩口气
4. 最后检查自己有没有顺手替读者、用户、团队或作者下定义

如果价值判断错了，后面写得越完整，越容易写出“逻辑没问题，但读者不想点”的文章。

如果节奏处理不好，即便内容本身没问题，读者也会在中途掉下去。

如果句子层继续靠“最抓人的”“不是……而是……”去硬撑，文章就算结构对了，也还是会显得用力过猛。

如果解释层继续靠“你真正的问题其实是”去抢跑，文章就算看起来更聪明，也还是会显得替别人下定义。
